riscv-pac/tests/ui/fail_unknown_trait.stderr
error: Unknown trait name. Expected: 'ExceptionNumber', 'CoreInterruptNumber', 'ExternalInterruptNumber', 'PriorityNumber', or 'HartIdNumber'
 --> tests/ui/fail_unknown_trait.rs:1:30
  |
1 | #[riscv_pac::pac_enum(unsafe InterruptNumber)]
  |                              ^^^^^^^^^^^^^^^
